# Doc_AutoFill

./: docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  run.sh
backend/src/backend/controllers/auth/: api.py  schemas.py
backend/src/backend/controllers/companies/: api.py  schemas.py
backend/src/backend/controllers/dependencies/: __init__.py  current_user.py
backend/src/backend/controllers/templates/: api.py  schemas.py
backend/src/backend/controllers/users/: api.py  schemas.py
backend/src/backend/core/auth/: dto.py  exceptions.py  utils.py
backend/src/backend/core/auth/interfaces/: __init__.py  jwt_encoder.py  password_hasher.py
backend/src/backend/core/auth/services/: auth_service.py  role_privilege.py
backend/src/backend/core/common/: exceptions.py
backend/src/backend/core/companies/: dto.py  entity.py  repo.py  service.py
backend/src/backend/core/templates/: dtos.py  entities.py  enums.py  exceptions.py
backend/src/backend/core/users/: dto.py  entity.py  exceptions.py  repo.py  service.py
backend/src/backend/infrastructure/adapters/: files_storage.py  jwt_encoder.py  password_hasher.py  template_parser.py  template_renderer.py
backend/src/backend/infrastructure/db/: __init__.py  engine.py
backend/src/backend/infrastructure/di/: container.py
backend/src/backend/main/: config.py  main.py
backend/src/backend/main/setup/: error_handlers.py  include_routers.py  setup_app.py
frontend/: Dockerfile  nginx.conf  package.json  (+2 more)
(+121 files in other folders)
