[project]
name = "fapitest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0",
    "fastapi[standard]>=0.115.12",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "dishka>=1.5.3",
    "aioboto3>=14.3.0",
    "docxtpl>=0.20.0",
    "motor>=3.7.1",
    "jinja2schema>=0.1.4",
]
